<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_margin="16dp"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_letters"/>
    <NumberPicker
        android:id="@+id/num_picker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_word"/>
    <EditText
        android:id="@+id/start_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_word_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_word"/>
    <EditText
        android:id="@+id/goal_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_word_hint"/>

    <Button
        android:id="@+id/begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_game"/>

</LinearLayout>