<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="215dp"
        android:padding="30dp"
        android:src="@drawable/logo" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button" />
        <Button
            android:id="@+id/contest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contest_button" />
        <Button
            android:id="@+id/how_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_button" />
        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_button" />
</LinearLayout>