<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/how_1"

        />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="203dp">
        <ImageView
            android:id="@+id/setup"
            android:layout_width="164dp"
            android:layout_height="191dp"
            android:padding="10dp"
            android:src="@drawable/setup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/how_2"
            />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="216dp"
            android:layout_height="192dp"
            android:padding="10dp"
            android:text="@string/how_3"/>

        <ImageView
            android:id="@+id/game"
            android:layout_width="164dp"
            android:layout_height="198dp"
            android:padding="10dp"
            android:src="@drawable/game"
            />
    </LinearLayout>


</LinearLayout>